--- a/public/css/appStyle.css
+++ b/public/css/appStyle.css
@@ -177,7 +177,7 @@ padding-top:30px;
 }
 
 body {
-background-image: url("pattern.jpeg");
+background-image: url("back.png");
 
 background-size:contain;
 width:100%;
