--- a/public/css/appStyle.css
+++ b/public/css/appStyle.css
@@ -69,6 +69,10 @@ left: 100%;
 margin-top: -1px;
 }
 
+.navbar-right > li >a{
+    font-family: 'Open Sans', sans-serif; 
+}
+
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
 width: 100%;
