--- a/public/css/appStyle.css
+++ b/public/css/appStyle.css
@@ -192,7 +192,7 @@ padding-top:30px;
 }
 
 body {
-background-image: url("bck.png");
+background-image: url("Elegant_Background-6.jpg");
 
 background-size:contain;
 width:100%;
