--- a/public/css/appStyle.css
+++ b/public/css/appStyle.css
@@ -192,7 +192,9 @@ padding-top:30px;
 }
 
 body {
-background-image: url("bck.png");
+background: #44A08D; /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #44A08D , #093637); /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #44A08D , #093637); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 background-size:contain;
 width:100%;
